still two tests KO